@@ -67,7 +67,7 @@ repositories {
 dependencies {
   // broken hive deps..
   compile group: 'sqlline', name: 'sqlline',  version: '1.1.6'
-  compile group: 'cascading', name: 'cascading-hive', version: '1.1.0-wip-dev'
+  compile group: 'cascading', name: 'cascading-hive', version: '1.1.0-wip-+'
 
   compile( group: 'org.apache.hive', name: 'hive-jdbc', version: hiveVersion  ){
     exclude group: 'sqline'
