@@ -2,6 +2,7 @@ Cascading-Hive changelog
 
 1.1 (unreleased)
 
+- added ability to capture and report task level counters in c.f.h.HiveRiffle
 - c.t.h.HiveTap throws a TapException when running on cluster and no remote metastore is configured. This avoids hard to
   debug inconsistency problems.
 - support for apache hive 0.14
